grammars-v4/matlab/matlabParser.py
# Generated from matlab.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class matlabParser ( Parser ):

    grammarFileName = "matlab.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'methods'", "'Abstract'", 
                     "'ConstructOnLoad'", "'HandleCompatible'", "'Hidden'", 
                     "'Sealed'", "'AllowedSubclasses'", "'InferiorClasses'", 
                     "'AbortSet'", "'Constant'", "'Dependent'", "'GetObservable'", 
                     "'NonCopyable'", "'SetObservable'", "'Transient'", 
                     "'Access'", "'GetAccess'", "'SetAccess'", "'public'", 
                     "'protected'", "'private'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'break'", "'case'", 
                     "'catch'", "'classdef'", "'continue'", "'else'", "'elseif'", 
                     "'end'", "'for'", "'function'", "'get'", "'global'", 
                     "'if'", "'otherwise'", "'persistent'", "'properties'", 
                     "'return'", "'set'", "'switch'", "'try'", "'while'", 
                     "'Static'", "'./'", "'.^'", "'.\\'", "'.*'", "'.''", 
                     "'=='", "'>='", "'<='", "'&&'", "'||'", "'~='", "'='", 
                     "'&'", "'|'", "':'", "'>'", "'/'", "'<'", "'-'", "'~'", 
                     "'+'", "'^'", "'\\'", "'*'", "'''", "'@'", "','", "'.'", 
                     "';'", "'{'", "'('", "'['", "'?'", "'}'", "')'", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NL", "BLOCKCOMMENT", "COMMENT", "WS", "ELLIPSIS", 
                      "BREAK", "CASE", "CATCH", "CLASSDEF", "CONTINUE", 
                      "ELSE", "ELSEIF", "END", "FOR", "FUNCTION", "GET", 
                      "GLOBAL", "IF", "OTHERWISE", "PERSISTENT", "PROPERTIES", 
                      "RETURN", "SET", "SWITCH", "TRY", "WHILE", "STATIC", 
                      "ELMENT_WISE_LEFT_DIVIDE", "ELMENT_WISE_POWER", "ELMENT_WISE_RIGHT_DIVIDE", 
                      "ELMENT_WISE_TIMES", "ELMENT_WISE_TRANSPOSE", "EQUALS", 
                      "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", "LOGICAL_AND", 
                      "LOGICAL_OR", "NOT_EQUAL", "ASSIGN", "BINARY_AND", 
                      "BINARY_OR", "COLON", "GREATER_THAN", "LEFT_DIVIDE", 
                      "LESS_THAN", "MINUS", "NOT", "PLUS", "POWER", "RIGHT_DIVIDE", 
                      "TIMES", "TRANSPOSE", "AT", "COMMA", "DOT", "SEMI_COLON", 
                      "LEFT_BRACE", "LEFT_PARENTHESIS", "LEFT_SQUARE_BRACKET", 
                      "QUESTION", "RIGHT_BRACE", "RIGHT_PARENTHESIS", "RIGHT_SQUARE_BRACKET", 
                      "ID", "IMAGINARY", "INT", "FLOAT", "STRING" ]

    RULE_atom_boolean = 0
    RULE_atom_empty_array = 1
    RULE_atom_empty_cell = 2
    RULE_atom_end = 3
    RULE_atom_float = 4
    RULE_atom_imaginary = 5
    RULE_atom_index_all = 6
    RULE_atom_integer = 7
    RULE_atom_string = 8
    RULE_atom_meta = 9
    RULE_atom_var = 10
    RULE_matlab_file = 11
    RULE_def_function = 12
    RULE_def_class = 13
    RULE_attrib_class_boolean = 14
    RULE_attrib_class_meta = 15
    RULE_attrib_property_boolean = 16
    RULE_attrib_property_access = 17
    RULE_attrib_method_boolean = 18
    RULE_attrib_method_access = 19
    RULE_atom_access = 20
    RULE_st_assign = 21
    RULE_st_command = 22
    RULE_st_if = 23
    RULE_st_for = 24
    RULE_st_switch = 25
    RULE_st_try = 26
    RULE_st_while = 27
    RULE_function_params = 28
    RULE_function_returns = 29
    RULE_statement = 30
    RULE_xpr_tree = 31
    RULE_xpr_tree_ = 32
    RULE_xpr_array = 33
    RULE_xpr_array_ = 34
    RULE_xpr_cell = 35
    RULE_xpr_cell_ = 36
    RULE_xpr_array_index = 37
    RULE_xpr_cell_index = 38
    RULE_xpr_field = 39
    RULE_xpr_function = 40
    RULE_xpr_handle = 41
    RULE_command_argument = 42

    ruleNames =  [ "atom_boolean", "atom_empty_array", "atom_empty_cell", 
                   "atom_end", "atom_float", "atom_imaginary", "atom_index_all", 
                   "atom_integer", "atom_string", "atom_meta", "atom_var", 
                   "matlab_file", "def_function", "def_class", "attrib_class_boolean", 
                   "attrib_class_meta", "attrib_property_boolean", "attrib_property_access", 
                   "attrib_method_boolean", "attrib_method_access", "atom_access", 
                   "st_assign", "st_command", "st_if", "st_for", "st_switch", 
                   "st_try", "st_while", "function_params", "function_returns", 
                   "statement", "xpr_tree", "xpr_tree_", "xpr_array", "xpr_array_", 
                   "xpr_cell", "xpr_cell_", "xpr_array_index", "xpr_cell_index", 
                   "xpr_field", "xpr_function", "xpr_handle", "command_argument" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    NL=24
    BLOCKCOMMENT=25
    COMMENT=26
    WS=27
    ELLIPSIS=28
    BREAK=29
    CASE=30
    CATCH=31
    CLASSDEF=32
    CONTINUE=33
    ELSE=34
    ELSEIF=35
    END=36
    FOR=37
    FUNCTION=38
    GET=39
    GLOBAL=40
    IF=41
    OTHERWISE=42
    PERSISTENT=43
    PROPERTIES=44
    RETURN=45
    SET=46
    SWITCH=47
    TRY=48
    WHILE=49
    STATIC=50
    ELMENT_WISE_LEFT_DIVIDE=51
    ELMENT_WISE_POWER=52
    ELMENT_WISE_RIGHT_DIVIDE=53
    ELMENT_WISE_TIMES=54
    ELMENT_WISE_TRANSPOSE=55
    EQUALS=56
    GREATER_THAN_OR_EQUAL=57
    LESS_THAN_OR_EQUAL=58
    LOGICAL_AND=59
    LOGICAL_OR=60
    NOT_EQUAL=61
    ASSIGN=62
    BINARY_AND=63
    BINARY_OR=64
    COLON=65
    GREATER_THAN=66
    LEFT_DIVIDE=67
    LESS_THAN=68
    MINUS=69
    NOT=70
    PLUS=71
    POWER=72
    RIGHT_DIVIDE=73
    TIMES=74
    TRANSPOSE=75
    AT=76
    COMMA=77
    DOT=78
    SEMI_COLON=79
    LEFT_BRACE=80
    LEFT_PARENTHESIS=81
    LEFT_SQUARE_BRACKET=82
    QUESTION=83
    RIGHT_BRACE=84
    RIGHT_PARENTHESIS=85
    RIGHT_SQUARE_BRACKET=86
    ID=87
    IMAGINARY=88
    INT=89
    FLOAT=90
    STRING=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Atom_booleanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return matlabParser.RULE_atom_boolean

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_boolean" ):
                listener.enterAtom_boolean(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_boolean" ):
                listener.exitAtom_boolean(self)




    def atom_boolean(self):

        localctx = matlabParser.Atom_booleanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_atom_boolean)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_empty_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_SQUARE_BRACKET(self):
            return self.getToken(matlabParser.LEFT_SQUARE_BRACKET, 0)

        def RIGHT_SQUARE_BRACKET(self):
            return self.getToken(matlabParser.RIGHT_SQUARE_BRACKET, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_empty_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_empty_array" ):
                listener.enterAtom_empty_array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_empty_array" ):
                listener.exitAtom_empty_array(self)




    def atom_empty_array(self):

        localctx = matlabParser.Atom_empty_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_atom_empty_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(matlabParser.LEFT_SQUARE_BRACKET)
            self.state = 89
            self.match(matlabParser.RIGHT_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_empty_cellContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACE(self):
            return self.getToken(matlabParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(matlabParser.RIGHT_BRACE, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_empty_cell

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_empty_cell" ):
                listener.enterAtom_empty_cell(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_empty_cell" ):
                listener.exitAtom_empty_cell(self)




    def atom_empty_cell(self):

        localctx = matlabParser.Atom_empty_cellContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_atom_empty_cell)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(matlabParser.LEFT_BRACE)
            self.state = 92
            self.match(matlabParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_endContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def END(self):
            return self.getToken(matlabParser.END, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_end" ):
                listener.enterAtom_end(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_end" ):
                listener.exitAtom_end(self)




    def atom_end(self):

        localctx = matlabParser.Atom_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atom_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(matlabParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_floatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(matlabParser.FLOAT, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_float

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_float" ):
                listener.enterAtom_float(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_float" ):
                listener.exitAtom_float(self)




    def atom_float(self):

        localctx = matlabParser.Atom_floatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_atom_float)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(matlabParser.FLOAT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_imaginaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMAGINARY(self):
            return self.getToken(matlabParser.IMAGINARY, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_imaginary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_imaginary" ):
                listener.enterAtom_imaginary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_imaginary" ):
                listener.exitAtom_imaginary(self)




    def atom_imaginary(self):

        localctx = matlabParser.Atom_imaginaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom_imaginary)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(matlabParser.IMAGINARY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_index_allContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(matlabParser.COLON, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_index_all

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_index_all" ):
                listener.enterAtom_index_all(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_index_all" ):
                listener.exitAtom_index_all(self)




    def atom_index_all(self):

        localctx = matlabParser.Atom_index_allContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atom_index_all)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(matlabParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_integerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(matlabParser.INT, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_integer" ):
                listener.enterAtom_integer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_integer" ):
                listener.exitAtom_integer(self)




    def atom_integer(self):

        localctx = matlabParser.Atom_integerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom_integer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(matlabParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_stringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(matlabParser.STRING, 0)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_string" ):
                listener.enterAtom_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_string" ):
                listener.exitAtom_string(self)




    def atom_string(self):

        localctx = matlabParser.Atom_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_atom_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(matlabParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom_metaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.QUESTION)
            else:
                return self.getToken(matlabParser.QUESTION, i)

        def atom_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(matlabParser.Atom_varContext)
            else:
                return self.getTypedRuleContext(matlabParser.Atom_varContext,i)


        def LEFT_BRACE(self):
            return self.getToken(matlabParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(matlabParser.RIGHT_BRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(matlabParser.COMMA)
            else:
                return self.getToken(matlabParser.COMMA, i)

        def getRuleIndex(self):
            return matlabParser.RULE_atom_meta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom_meta" ):
                listener.enterAtom_meta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom_meta" ):
                listener.exitAtom_meta(self)




    def atom_meta(self):
